--- a/classes.css
+++ b/classes.css
@@ -1,3 +1,33 @@
 body {
-background-color: red;
+
 }
+
+.title {
+font-size: 35px;
+display: block;
+margin: auto;
+width: 500px;
+background-color: red;
+text-align: center;
+}
+
+.reminders {
+font-size: 20px;
+width: 900px;
+margin: auto;
+}
+
+.remindertitle {
+text-decoration: underline;
+font-size: 25px;
+}
+
+.notes {
+
+}
+
+.questions {
+
+}
+
+
